compiler/testData/diagnostics/testsWithExplicitApi/companionObject.kt
public class Bar {
    companion <!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>object<!> {}
}